listando áreas de interesse (com inglês)

--- a/academica/templates/academica/academica.html
+++ b/academica/templates/academica/academica.html
@@ -81,6 +81,9 @@
     <li>{% lng "Áreas de Interesse" "Areas of Interest" %}</li>
     <li class="inside_ul">
       <ul>
+        <a href="{% url 'lista_areas_interesse' %}"><li>
+          {% lng "Lista de Áreas de Interesse" "List of Areas of Interest" %}
+        </li></a>
         <a href="{% url 'evolucao_areas' %}"><li>
           {% lng "Evolução de Áreas de Interesse" "Evolution of Areas of Interest" %}
         </li></a>
