--- a/templates/grafico_prioridades.html
+++ b/templates/grafico_prioridades.html
@@ -25,7 +25,7 @@
     if(diff == 0) {diff=1.0;} // Evita divisão por zero
 
     var config = {     // REFERENTE AO PIE CHART
-      type: 'pie',
+      type: "pie",
       data: {
         datasets: [{
           data: [
