acertando tamanho colunas

--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -258,8 +258,8 @@
       <tr>
         <th title="Nome do estudante">{% lng "Nome" "Name" %}</th>
         <th title="Curso do estudante">{% lng "Curso" "Program" %}</th>
-        <th style="width: 4em;" title="Prioridade de opção do estudante">{% lng "Ordem" "Order" %}</th>
-        <th title="Coeficiente de Rendimento Acadêmico do estudante">{% lng "CR" "GPA" %}</th>
+        <th style="width: 5em;" title="Prioridade de opção do estudante">{% lng "Ordem" "Order" %}</th>
+        <th style="width: 3em;" title="Coeficiente de Rendimento Acadêmico do estudante">{% lng "CR" "GPA" %}</th>
       </tr>
     </thead>
     <tbody>
