--- a/templates/calendario_bancas.html
+++ b/templates/calendario_bancas.html
@@ -180,6 +180,7 @@
                           title: value.title ? value.title : "",
                           description: value.title ? value.title : "",
                           editable: value.editable,
+                          className: value.className,
                         });
                       }
                       successCallback(eventsList);
