escondendo melhor os dados

--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -316,13 +316,13 @@
             <option value="todos" {% if tipo_banca == "todos" %}selected="todos"{% endif %} class="opt_edi troca_lingua" data-pt="todas" data-en="all">
               todas
             </option>
-            <option value="Intermediária" {% if tipo_banca == "Intermediária" %}selected{% endif %} class="opt_edi troca_lingua" data-pt="Intermediária" data-en="Intermediate">
+            <option value="b_intermediaria" {% if tipo_banca == "Intermediária" %}selected{% endif %} class="opt_edi troca_lingua" data-pt="Intermediária" data-en="Intermediate">
               Intermediária
             </option>
-            <option value="Final" {% if tipo_banca == "Final" %}selected{% endif %} class="opt_edi troca_lingua" data-pt="Final" data-en="Final">
+            <option value="b_final" {% if tipo_banca == "Final" %}selected{% endif %} class="opt_edi troca_lingua" data-pt="Final" data-en="Final">
               Final</option>
-            <option value="Falconi" {% if tipo_banca == "Falconi" %}selected{% endif %} class="opt_edi">Falconi</option>
-            <option value="Probation" {% if tipo_banca == "Probation" %}selected{% endif %} class="opt_edi troca_lingua" data-pt="Probatória" data-en="Probation">
+            <option value="b_falconi" {% if tipo_banca == "Falconi" %}selected{% endif %} class="opt_edi">Falconi</option>
+            <option value="b_probation" {% if tipo_banca == "Probation" %}selected{% endif %} class="opt_edi troca_lingua" data-pt="Probatória" data-en="Probation">
               Probatória
             </option>
           </select>
