--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -11,6 +11,7 @@
   {% load aderencia_aluno %}
   {% load linguas %}
   <script src="{% static 'js/Chart.min.js' %}"/></script>
+  <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
   
   <style>
 
