melhor apresentação do calendário

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -514,7 +514,7 @@
 
 
 {% comment %} vvvvvv    REMOVER ESSA PARTE    vvvvvvv {% endcomment %}
-<script>
+{% comment %} <script>
   function showElements(els) {
     els.forEach(el => {
       if (el.classList.contains("lin_aulas")) {
@@ -533,7 +533,7 @@
       }
     });
   }
-</script>
+</script> {% endcomment %}
 {% comment %} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ {% endcomment %}
 
 {% endblock %}
