avisando em avaliar bancas quando usuário não avaliou banca

--- a/projetos/static/css/cores.css
+++ b/projetos/static/css/cores.css
@@ -1,5 +1,6 @@
 .redish {background-color: #ffcccc;}
 .yellowish {background-color: #ffffcc;}
+.whitish {background-color: #ffffff;}
 
 .red-normal {
   color: red;
